Add Claude Code installer with 4 core skills
- Build Node.js/TypeScript CLI tool (commander + yaml)
- Implement agent detection (Claude Code, Cursor, Aider)
- Create adapter system for universal → agent-specific format
- Add 4 core self-evolving skills:
  1. record-architectural-decision: Capture design choices
  2. extract-pattern: Identify recurring solutions
  3. update-skill: Self-improve based on experience
  4. surface-gap: Make uncertainty visible
- Universal skill format: YAML metadata + Markdown instructions
- Claude Code adapter: Install to ~/.claude/skills/
- Commands: install, list, detect
- Full documentation in skills/README.md

Claude Code support only for now. Cursor/Aider planned.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ Thumbs.db
 # Project specific
 .agent/  # This will be generated per-project
 *.backup
+
+# Build output
+dist/
+build/
+*.js
+*.js.map
+*.d.ts
+
+# Runtime
+.agent-evolver/
