feat: Support local (default) and global skill installation
- Default: Install to ./.agent-evolver/skills/ (project-specific)
- Global: Install to ~/.claude/skills/ with --global flag
- Local skills are version controlled with the project
- Global skills available across all projects
- Updated CLI with --global option
- Updated README with installation instructions
- Updated skills/README.md with local vs global guidance

Rationale: Project-specific skills should be versioned with the repo,
not globally installed. This enables team collaboration and
different skill sets per project.

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,5 @@ build/
 *.js.map
 *.d.ts
 
-# Runtime
+# Runtime (exclude from agent-evolver repo, but users' projects should version control .agent-evolver/skills/)
 .agent-evolver/
