fix: Install to ./.claude/skills (or ./.agents fallback) and filter non-skill directories
Fixes:
1. Local installation now uses ./.claude/skills (if Claude detected) or ./.agents/skills (fallback)
2. Filter out non-skill entries (like README.md) when loading skills
3. Add isValidSkill() check (must be directory with skill.yaml)

Changes:
- Updated getTargetSkillsDir() to use agent-specific or fallback path
- Added isValidSkill() helper to filter skill directories
- Filter entries before attempting to load skills
- Updated README and skills/README.md with new paths
- Updated .gitignore (.claude/ and .agents/ instead of .agent-evolver/)

This prevents errors like:
  Error: ENOTDIR: not a directory, open '.../skills/README.md/skill.yaml'

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,6 @@ build/
 *.js.map
 *.d.ts
 
-# Runtime (exclude from agent-evolver repo, but users' projects should version control .agent-evolver/skills/)
-.agent-evolver/
+# Runtime (exclude from agent-evolver repo, but users' projects should version control .claude/skills/ or .agents/skills/)
+.claude/
+.agents/
