--- a/skills/surface-gap/skill.yaml
+++ b/skills/surface-gap/skill.yaml
@@ -1,5 +1,5 @@
 name: surface-gap
-version: 1.0.0
+version: 1.1.0
 description: Identify missing knowledge, unclear instructions, or situations where existing skills don't provide guidance
 author: adhd8k
 agentCompatibility:
@@ -8,10 +8,17 @@ agentCompatibility:
   - aider
   - openclaw
 triggers:
+  # Phrase-based: user says these things
   - pattern: "I'm not sure how to"
   - pattern: "no skill covers"
   - pattern: "unclear what"
   - pattern: "need guidance on"
+  # Action-based: Claude is doing these things (even silently)
+  - action: "About to implement something with no prior examples in this codebase"
+  - action: "Making an assumption about undocumented or ambiguous behavior"
+  - action: "Encountering an error with no clear or obvious fix"
+  - action: "Guessing at the intended design because requirements are unclear"
+completion_check: "Am I about to guess or proceed without clear guidance?"
 variables:
   gapsLog: "{{projectRoot}}/.agent-evolver/knowledge-gaps.md"
 files:
