Add Claude Code installer with 4 core self-evolving skills (#1)
* Add Claude Code installer with 4 core skills

- Build Node.js/TypeScript CLI tool (commander + yaml)
- Implement agent detection (Claude Code, Cursor, Aider)
- Create adapter system for universal → agent-specific format
- Add 4 core self-evolving skills:
  1. record-architectural-decision: Capture design choices
  2. extract-pattern: Identify recurring solutions
  3. update-skill: Self-improve based on experience
  4. surface-gap: Make uncertainty visible
- Universal skill format: YAML metadata + Markdown instructions
- Claude Code adapter: Install to ~/.claude/skills/
- Commands: install, list, detect
- Full documentation in skills/README.md

Claude Code support only for now. Cursor/Aider planned.

* feat: Support local (default) and global skill installation

- Default: Install to ./.agent-evolver/skills/ (project-specific)
- Global: Install to ~/.claude/skills/ with --global flag
- Local skills are version controlled with the project
- Global skills available across all projects
- Updated CLI with --global option
- Updated README with installation instructions
- Updated skills/README.md with local vs global guidance

Rationale: Project-specific skills should be versioned with the repo,
not globally installed. This enables team collaboration and
different skill sets per project.

* fix: Install to ./.claude/skills (or ./.agents fallback) and filter non-skill directories

Fixes:
1. Local installation now uses ./.claude/skills (if Claude detected) or ./.agents/skills (fallback)
2. Filter out non-skill entries (like README.md) when loading skills
3. Add isValidSkill() check (must be directory with skill.yaml)

Changes:
- Updated getTargetSkillsDir() to use agent-specific or fallback path
- Added isValidSkill() helper to filter skill directories
- Filter entries before attempting to load skills
- Updated README and skills/README.md with new paths
- Updated .gitignore (.claude/ and .agents/ instead of .a

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,14 @@ Thumbs.db
 # Project specific
 .agent/  # This will be generated per-project
 *.backup
+
+# Build output
+dist/
+build/
+*.js
+*.js.map
+*.d.ts
+
+# Runtime (exclude from agent-evolver repo, but users' projects should version control .claude/skills/ or .agents/skills/)
+.claude/
+.agents/
