--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agent-evolver",
+  "name": "@adhd8k/agent-evolver",
   "version": "0.1.0",
   "description": "Self-evolving agentic coding system - agents that learn project patterns and update their own skills",
   "main": "dist/index.js",
